handle duplicate keytags, part 1